[gd_scene load_steps=9 format=3 uid="uid://c80jmo5p7x2l4"]

[ext_resource type="Script" path="res://Scripts/ActivatableMovableElement.gd" id="1_v0jgr"]
[ext_resource type="PackedScene" uid="uid://b8intk1ci0l4v" path="res://Scenes/Prefabs/Level Design Elements/InteractableButton.tscn" id="2_g6dh4"]

[sub_resource type="CylinderMesh" id="CylinderMesh_1wxs3"]
top_radius = 3.0
bottom_radius = 3.0
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5lojs"]
height = 1.0
radius = 3.0

[node name="Elevator" type="Node3D"]
script = ExtResource("1_v0jgr")
two_way_movement = true

[node name="ElevatorPivot" type="Node3D" parent="."]

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="ElevatorPivot"]
collision_mask = 7
sync_to_physics = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="ElevatorPivot/AnimatableBody3D"]
mesh = SubResource("CylinderMesh_1wxs3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorPivot/AnimatableBody3D"]
shape = SubResource("CylinderShape3D_5lojs")

[node name="InteractableButton" parent="ElevatorPivot" node_paths=PackedStringArray("movable_platforms") instance=ExtResource("2_g6dh4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 2)
movable_platforms = [NodePath("../..")]

[node name="StartingPosition" type="Node3D" parent="."]

[node name="EndingPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="."]
collision_layer = 0
collision_mask = 0
sync_to_physics = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatableBody3D"]
